# witnessd

./: .air.toml  .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .pre-commit-config.yaml  .staticcheckrc  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PRIVACY.md  README-MACOS-IME.md  README.md  SECURITY.md  allowed_signers  attestation.template.json  capabilities.json  docker-compose.yml  go.mod  go.sum  renovate.json  tpm-policy.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.slsa-provenance/: README.md
Formula/: witnessd.rb
configs/: config.example.toml
data/: .gitignore  README.md  download-datasets.sh
docs/: EVIDENCE-ARCHITECTURE.md  INDEPENDENT-VERIFICATION.md  PROCESS-INTEGRITY.md  PROVENANCE.md  README.md  RELEASING.md  SLSA.md  ime-api.md  paper.md
internal/: integration_test.go
paper/: data-acquisition-plan.md  jitter-seal.md  validation-analysis.md
patent/: abstract.docx  abstract.md  claim-outline.md  claims.docx  claims.md  pandoc-template.tex  specification.docx  specification.md
rules.d/: 99-witnessd-tpm.rules
rust/: deny.toml
rust/witnessd-core/: Cargo.toml
rust/witnessd-core/fuzz/: Cargo.toml
rust/witnessd-core/fuzz/fuzz_targets/: vdf_fuzzer.rs
rust/witnessd-core/src/: api.rs  bridge.rs  checkpoint.rs  collaboration.rs  compact_ref.rs  config.rs  continuation.rs  crypto.rs  declaration.rs  engine.rs  evidence.rs  forensics.rs  frb.rs  frb_generated.rs  jitter.rs  keyhierarchy.rs  lib.rs  physjitter_bridge.rs  platform.rs  presence.rs  provenance.rs  research.rs  sentinel.rs  store.rs  timing.rs  trust_policy.rs  wal.rs  war.rs
rust/witnessd-core/src/analysis/: behavioral_fingerprint.rs  mod.rs
rust/witnessd-core/src/anchors/: bitcoin.rs  ethereum.rs  mod.rs  notary.rs  ots.rs  rfc3161.rs  types.rs  verification.rs
rust/witnessd-core/src/crypto/: obfuscated.rs  obfuscation.rs
rust/witnessd-core/src/fingerprint/: activity.rs  comparison.rs  consent.rs  mod.rs  storage.rs  voice.rs
rust/witnessd-core/src/identity/: apple.rs  mnemonic.rs  mod.rs  secure_storage.rs
rust/witnessd-core/src/ipc/: mod.rs  secure_channel.rs  unix_socket.rs
rust/witnessd-core/src/mmr/: errors.rs  mmr.rs  mod.rs  node.rs  proof.rs  store.rs
rust/witnessd-core/src/physics/: biological.rs  clock.rs  entanglement.rs  environment.rs  mod.rs  puf.rs  synthesis.rs
rust/witnessd-core/src/platform/: broadcaster.rs  linux.rs  macos.rs  mod.rs  mouse_stego.rs  synthetic.rs  types.rs  windows.rs
rust/witnessd-core/src/tpm/: linux.rs  mod.rs  secure_enclave.rs  software.rs  types.rs  verification.rs  windows.rs
rust/witnessd-core/src/vdf/: aggregation.rs  mod.rs  params.rs  proof.rs  roughtime_client.rs  timekeeper.rs
rust/witnessd-core/tests/: integration_test.rs
schemas/: declaration-v1.json  evidence-v1.json  war-block-v1.json
specs/: behavioral-metrics.md  evidence-format.md  keystroke-metrics.md  (+3 more)
(+435 files in other folders)
