[package]
name = "witnessd-core"
version = "0.1.0"
edition = "2021"
description = "Cryptographic core for high-integrity document witnessing"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Cryptography
sha2 = "0.10.8"
hmac = "0.12.1"
ed25519-dalek = "2.1.1"
rand = "0.9.0"
bip39 = "2.1.0"
zeroize = { version = "1.8.1", features = ["derive"] }

# Storage
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
getrandom = "0.2"
ripemd = "0.1"
der = "0.7"

# Math & Analysis
statrs = "0.18.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] } # Reverted from dummy 3.0.0 to functional high-perf RC
lazy_static = "1.5.0"

# Async & System
tokio = { version = "1.43.0", features = ["full"] }
sysinfo = "0.33.1"
nix = { version = "0.29", features = ["signal", "process", "socket", "user", "fs"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
raw-cpuid = "11.2.0"
base64 = "0.22.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
hex = "0.4.3"
urlencoding = "2.1"
dirs = "5.0.1"
notify = "6.1.1"
crc32fast = "1.4.2"
hkdf = "0.12.4"
hostname = "0.4.0"
rsa = "0.9.6"


# Roughtime (Rougenough crates)
roughenough-protocol = "2.0.0"
roughenough-common = "2.0.0"

# Integration (FRB v2)
flutter_rust_bridge = "=2.11.1"
keyring = "2.3.3"
glob = "0.3.2"
toml = "0.8.19"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"

# Thread-safe concurrent collections
dashmap = "6.0"

# PhysJitter - hardware entropy for proof-of-process
physjitter = { version = "0.2", optional = true }

# Windows Specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_TpmBaseServices",
] }
# Note: Windows TPM support implemented via native TBS API.

# macOS Specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.6"
accessibility = "0.1.6"
objc = "0.2.7"
security-framework = { version = "3.0.0", features = ["OSX_10_12"] }
security-framework-sys = "2.9.1"

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.6"
evdev = "0.12"
input-linux = "0.6"
libc = "0.2"
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

[features]
default = []
flutter = []
cargo-clippy = []
secure-enclave = []
physjitter = ["dep:physjitter"]
x11 = ["x11rb"]  # Enable X11 focus detection on Linux

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }
